# potoki

./: .travis.yml  LICENSE  potok.cabal  potoki.cabal
samples/: 1
test/: Main.hs
tests/: Main.hs
