name:
  potok
version:
  0.1
synopsis:
description:
category:
homepage:
  https://github.com/nikita-volkov/potok 
bug-reports:
  https://github.com/nikita-volkov/potok/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2017, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/potok.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    Potok.Source
    Potok.Fetcher
    Potok.AcquiredSink
    Potok.Sink
    Potok.Stream
  other-modules:
    Potok.Prelude
  build-depends:
    -- 
    attoparsec >=0.13 && <0.15,
    -- 
    text >=1 && <2,
    bytestring ==0.10.*,
    -- 
    async >=2.1 && < 3,
    -- 
    contravariant >=1.4 && <2,
    profunctors >=5.2 && <6,
    kan-extensions ==5.*,
    base-prelude <2,
    base >=4.7 && <5
